Fix alignment of icons in footer buttons when using a.button

--- a/styl/Buttons.styl
+++ b/styl/Buttons.styl
@@ -30,6 +30,8 @@ button,
 	
 	cursor: pointer;
 	
+	-webkit-appearance: none; // Remove buttonness
+
 	.badge {
 		position: absolute;
 		right: -0.75em;
